# codebase

./: .codeclimate.yml  .dockerignore  .env.development  .eslintrc.js  .gitattributes  .gitignore  .remarkignore  .yamllint  .yarnrc  Cargo.toml  Dockerfile  LICENSE.md  README.md  codegen.yml  dev.Dockerfile  docker-compose.yml  gatsby-node.js  jest.config.js  package.json  staging.Dockerfile  tsconfig.json
.github/: PULL_REQUSET_TEMPLATE.md  dependabot.yml
@types/: cypress.d.ts  process.d.ts
components/: README.md  package.json  tsconfig.json
development/: README.md  base.Dockerfile
diagrams/: README.md
docker/: api.Dockerfile  api.entrypoint.sh  base.Dockerfile  development.interface.Dockerfile  development.interface.command.sh  interface.command.sh  production.interface.Dockerfile  server.Dockerfile  server.entrypoint.sh  shell.Dockerfile  staging.interface.Dockerfile  workers.Dockerfile
documents/: Gemfile  README.md  neon_documents.gemspec
email/: .rspec_status  Dockerfile  Gemfile  README.md  neon_email.gemspec
emails/: Dockerfile  Gemfile  Guardfile  README.md  app.rb  neon_email.gemspec
git_flow/: CHANGELOG.md  Cargo.toml  README.md
git_flow/src/: main.rs
git_flow/src/merged_pull_requests/: mod.rs  release_branch.rs
git_flow/src/pull_requests/: bugfix_branch.rs  dependabot_branch.rs  deployment_branch.rs  feature_branch.rs  improvement_branch.rs  mod.rs  release_branch.rs  version_bump_branch.rs
i18n/: CHANGELOG.md  README.md  package.json
infrastructure/: README.md  bootstrap.sh
neon_nlp/: CHANGELOG.md  Cargo.toml  README.md
(+895 files in other folders)
