[package]
name = "git_flow"
version = "0.0.2"
authors = ["support@neonlaw.com <support@neonlaw.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/neonlaw/codebase"
documentation = "https://github.com/neonlaw/codebase/tree/development/git_flow/README.md"
description = "An CLI for an opiniated git flow for monorepos on GitHub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
